<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/common_bg_dialog"
    android:clipToOutline="true"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:src="@mipmap/common_bg_bottomdialog_top"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_notification_enable_popup_title"
            android:text="@string/notification_enable_popup_title"
            android:layout_marginTop="24dp"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="#1D1D1D"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_notification_enable_popup_desc"
            android:text="@string/notification_enable_popup_desc"
            android:layout_marginTop="16dp"
            android:textSize="14dp"
            android:textColor="#666666"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_notification_enable_confirm"
                android:background="@drawable/common_menu_btn_2_dark"
                android:text="@string/notification_enable_popup_confirm"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

            <Button
                android:id="@+id/btn_notification_enable_cancel"
                android:layout_marginTop="16dp"
                android:background="@drawable/common_menu_btn_1_light"
                android:text="@string/notification_enable_popup_cancel"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="#333333"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
